[package]
name = "lever"
version = "0.1.1-alpha.9"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
description = "Pillars for Transactional Systems and Data Grids"
keywords = ["concurrency", "transactional", "database", "multitasking", "multithreading"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/vertexclique/lever"
repository = "https://github.com/vertexclique/lever"
documentation = "https://docs.rs/lever"
readme = "README.md"
license = "Apache-2.0/MIT"
exclude = [
    "scripts/*",
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[features]
default = []
nightly = ["hw"]
hw = []

[dependencies]
log = "0.4"
lazy_static = "1.4"
crossbeam-epoch = "0.8.2"
parking_lot = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
rand_distr = "0.2"
rayon = "1"

[[bench]]
name = "op_ser_benches"
path = "benches/op_ser_benches.rs"
harness = false

[[bench]]
name = "lotable_iter_benches"
path = "benches/lotable_iter_benches.rs"
harness = false

[[bench]]
name = "lotable_threaded_join_benches"
path = "benches/lotable_threaded_join_benches.rs"
harness = false

[[bench]]
name = "arc_rwlock_benches"
path = "benches/arc_rwlock_benches.rs"
harness = false

[[bench]]
name = "read_parameterized_benches"
path = "benches/read_parameterized_benches.rs"
harness = false
