[package]
name = "cuckoo_benches"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lever = { path = "../../" }
bustle = "0.4.1"
tracing-subscriber = "0.2"
num_cpus = "1"


[profile.release]
debug = true

[profile.bench]
debug = true